<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/greey">

<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"
    android:background="@color/black">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img3"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:src="@drawable/ic_error_outline"
        tools:ignore="MissingConstraints" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="Auto Descarga"
        android:textColor="@color/white"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="Activada"
        android:textColor="@color/blue"
        android:textAlignment="center"/>
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <androidx.appcompat.widget.AppCompatImageView
          android:id="@+id/img4"
          android:layout_width="32dp"
          android:layout_height="32dp"
          android:src="@drawable/ic_pen"
          tools:ignore="MissingConstraints"
          android:layout_alignParentEnd="true"
          android:paddingLeft="10dp"/>

  </RelativeLayout>

</androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img1"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:paddingTop="50dp"
        android:src="@drawable/you"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/img1"
        android:paddingLeft="20dp"
        android:paddingTop="75dp"
        android:text="@string/name_img_netf_1"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_1"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/img1"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:text="@string/desc_img_netf_1"
        android:textColor="@color/white" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignRight="@+id/text_1"
        android:layout_marginTop="75dp"
        android:src="@drawable/ic_arrow"
        tools:ignore="MissingConstraints" />

<!-- Segunda Fila-->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img5"
        android:layout_width="175dp"
        android:layout_height="200dp"
        android:layout_below="@+id/img1"
        android:paddingTop="50dp"
        android:src="@drawable/umbrella_academy"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/text_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img1"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/img5"
        android:paddingLeft="20dp"
        android:paddingTop="75dp"
        android:text="@string/name_img_netf_2"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/text_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_3"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/img5"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:text="@string/desc_img_netf_2"
        android:textColor="@color/white" />







</RelativeLayout>